Reorganized code a bit more and added an interface to handle reading from the database and to fill the correct list. I also created a list manager again to handle the different list return types. I also updated the type query and table query classes to additionally handle directing code towards the reader classes.

--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -103,10 +103,14 @@
       <DependentUpon>DoctorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\DatabaseModels\DatabaseQueryManager.cs" />
+    <Compile Include="Models\DatabaseModels\ListManagerModels\ListManager.cs" />
     <Compile Include="Models\DatabaseModels\SqlCommandManager.cs" />
     <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\ISqlCommandTableReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandParameters.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryManagerModels\SqlQueryManager.cs" />
+    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandParameterModels\SqlCommandParameters.cs" />
+    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\SqlCommandAppointmentReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\SqlCommandPatientInfoReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\SqlCommandPrescriptionReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryManager.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\ISqlTableStrings.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\SqlAppointmentStrings.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\SqlPatientInfoStrings.cs" />
@@ -251,7 +255,6 @@
   <ItemGroup>
     <Folder Include="Controls\" />
     <Folder Include="Models\ComparatorModels\" />
-    <Folder Include="Models\DatabaseModels\SqlCommandModels\SqlCommandManagerModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
