Finished the database query manager code to handle all queries made by the rest of the application. I separated out each query by type and added constraints to the method calls to ensure that appropriate query types are supplied.

--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -103,26 +103,35 @@
       <DependentUpon>DoctorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\DatabaseModels\DatabaseQueryManager.cs" />
-    <Compile Include="Models\DatabaseModels\ListManagerModels\ListManager.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandManager.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\ISqlCommandTableReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandParameterModels\SqlCommandParameters.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\SqlCommandAppointmentReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\SqlCommandPatientInfoReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlCommandModels\SqlCommandReaderModels\SqlCommandPrescriptionReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\ISqlTableStrings.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\SqlAppointmentStrings.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\SqlPatientInfoStrings.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryStringModels\SqlPrescriptionStrings.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTableModels\ISqlTableQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTableModels\SqlAppointmentQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTableModels\SqlPatientInfoQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTableModels\SqlPrescriptionQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\ISqlTypeQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\SqlDeleteQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\SqlInsertQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\SqlSelectQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\SqlUpdateQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\CountAppointment.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\IAppointmentListQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\ICountQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\INonQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\CountPatientInfo.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\IPatientInfoListQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\CountPrescription.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\DeleteAppointmentBy_VisitId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\InsertAppointment.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\InsertPatientInfo.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\InsertPrescription.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\ISqlQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_DateRange.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_Date_PatientId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_PatientId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_VisitId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_AND.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_OR.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_PatientId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\IPrescriptionListQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_PatientId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_VisitId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\UpdateBalanceBy_Cost_PatientId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlAppointmentReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlCountReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlNoReturnReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlPatientInfoReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlPrescriptionReader.cs" />
     <Compile Include="Models\PatientModels\Patient.cs" />
     <Compile Include="Models\PatientModels\PatientAppointment.cs" />
     <Compile Include="Models\PatientModels\PatientPrescription.cs" />
