Changed noreturn to nonreturn for the reader class to keep it uniform with other names I used when referring to similar transactions.

--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlAppointmentReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlCountReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlNoReturnReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlNonReturnReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlPatientInfoReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlPrescriptionReader.cs" />
     <Compile Include="Models\PatientModels\Patient.cs" />
