--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -104,17 +104,18 @@
     </Compile>
     <Compile Include="Models\DatabaseModels\DatabaseQueryManager.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\CountAppointment.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\IAppointmentListQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\ICountQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\INonQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IAppointmentListQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ICountQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\INonQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\CountPatientInfo.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\IPatientInfoListQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IPatientInfoListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\CountPrescription.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\DeleteAppointmentBy_VisitId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\InsertAppointment.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\InsertPatientInfo.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\InsertPrescription.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\ISqlQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlCommandParameters.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_DateRange.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_Date_PatientId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_PatientId.cs" />
@@ -122,7 +123,7 @@
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_AND.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_OR.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\IPrescriptionListQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IPrescriptionListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_PatientId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_VisitId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\UpdateBalanceBy_Cost_PatientId.cs" />
