--- a/Project-2-EMS_Tests/Project-2-EMS_Tests.csproj
+++ b/Project-2-EMS_Tests/Project-2-EMS_Tests.csproj
@@ -62,7 +62,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models_Tests\" />
+    <Folder Include="Models_Tests\DatabaseModels_Tests\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
