--- a/Project-2-EMS_Tests/Project-2-EMS_Tests.csproj
+++ b/Project-2-EMS_Tests/Project-2-EMS_Tests.csproj
@@ -47,8 +47,17 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.SqlClient, Version=4.6.1.2, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\Project-2-EMS\packages\System.Data.SqlClient.4.8.2\lib\net461\System.Data.SqlClient.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models_Tests\ComparerModels_Tests\AppointmentComparer_Test.cs" />
+    <Compile Include="Models_Tests\ComparerModels_Tests\PatientInfoComparer_Test.cs" />
+    <Compile Include="Models_Tests\ComparerModels_Tests\PrescriptionComparer_Test.cs" />
+    <Compile Include="Models_Tests\DatabaseModels_Tests\DatabaseQueryManager_Test.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,9 +70,7 @@
       <Name>Project-2-EMS</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models_Tests\DatabaseModels_Tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
