After testing, I refactored the code to make more use of generic methods. I reworked all of the query classes and replaced the databasequerymanager with the sqldatabaseaccess class.

--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -105,20 +105,18 @@
     <Compile Include="Models\ComparerModels\AppointmentComparer.cs" />
     <Compile Include="Models\ComparerModels\PatientInfoComparer.cs" />
     <Compile Include="Models\ComparerModels\PrescriptionComparer.cs" />
-    <Compile Include="Models\DatabaseModels\DatabaseQueryManager.cs" />
+    <Compile Include="Models\DatabaseModels\ISqlDatabaseAccess.cs" />
+    <Compile Include="Models\DatabaseModels\SqlDatabaseAccess.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\CountAppointment.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IAppointmentListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ICountQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\INonQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\CountPatientInfo.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IPatientInfoListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\CountPrescription.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\DeleteAppointmentBy_VisitId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\InsertAppointment.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\InsertPatientInfo.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\InsertPrescription.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlCommandParameters.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_DateRange.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_Date_PatientId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_PatientId.cs" />
@@ -126,16 +124,12 @@
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_AND.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_OR.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IPrescriptionListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_PatientId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_VisitId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\UpdateBalanceBy_Cost_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlAppointmentReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlCountReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlNonReturnReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlPatientInfoReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlPrescriptionReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlListReader.cs" />
+    <Compile Include="Models\PatientModels\IPatient.cs" />
     <Compile Include="Models\PatientModels\PatientInfo.cs" />
     <Compile Include="Models\PatientModels\PatientAppointment.cs" />
     <Compile Include="Models\PatientModels\PatientPrescription.cs" />
