--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_VisitId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\UpdateBalanceBy_Cost_PatientId.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlCountReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlListReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlCountReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlListReader.cs" />
     <Compile Include="Models\PatientModels\IPatient.cs" />
